--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
   flutter_screenutil: ^5.9.3
+  flutter_staggered_grid_view: ^0.7.0
   get: ^4.6.6
   scrollable_positioned_list: ^0.3.8
 
