--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_staggered_grid_view: ^0.7.0
   get: ^4.6.6
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
