--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,11 +17,4 @@ jobs:
       - run: flutter pub upgrade
       - run: flutter pub get
       - run: flutter analyze
-      - run: flutter build web
-      - name: Deploy to Netlify
-        uses: netlify/deploy@v1
-        with:
-          netlify-token: ${{ secrets.NETLIFY_TOKEN }}
-          site-id: ${{ secrets.NETLIFY_SITE_ID }}
-          deploy-message: "Deploy from GitHub Actions"
-          deploy-branch: "main"
+      - run: flutter build web --release
