--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_lints: ^4.0.0
   flutter_screenutil: ^5.9.3
   flutter_staggered_grid_view: ^0.7.0
+  flutter_svg: ^2.0.10+1
   get: ^4.6.6
   url_strategy: ^0.2.0
 
