Feat(ProjectSection):update the project section under landing page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,5 @@
         }
       },
       "java.configuration.updateBuildConfiguration": "automatic",
+      "cmake.sourceDirectory": "/home/rajkumargahane/Documents/rajkumar_portfolio/flutter-portfolio.io/windows/flutter",
 }
