--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.10+1
   get: ^4.6.6
+  http: ^1.2.2
   url_strategy: ^0.2.0
 
 dev_dependencies:
